--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules
-/package.json
 /node_modules
 gulpconfig.json
-Mix-manifest.json
 Package-lock.json
-package.json
-Yarn.lock
-/sass
+yarn.lock
+acfe-json
+acf-json
+acfe-php
+acf-php
