--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules
 /node_modules
-gulpconfig.json
 Package-lock.json
 yarn.lock
 acfe-json
 acf-json
 acfe-php
 acf-php
+/assets/homepage-assets
